--- a/views/habits.ejs
+++ b/views/habits.ejs
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="author" content="Ivan Todorov">
+   <link rel="icon" href="../Media/mental-assist-icon.ico">
    <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css" />
    <link rel="stylesheet" href="hJps://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.min.css">
    <script src="https://kit.fontawesome.com/5c4ebf68fc.js" crossorigin="anonymous"></script>
@@ -16,38 +17,39 @@
    <div id="navbar">
       <input type="checkbox" id="check" />
       <div class="menu">
-        <label class="button-click" for="check">
-          <span class="b">&#9776;</span>
-          <span class="x">X</span>
-        </label>
-        <ul class="menu-items">
-      <a class="logo-box" href="/">
-      <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
-  </a>
-      <div class="topnav-right">
-      <a class="underline" href="mindfulness">
-          <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
-      </a>
-      
-      <a class="underline-active" href="habits">
-          <img src="../Media/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
-      </a>
+         <label class="button-click" for="check">
+            <span class="b">&#9776;</span>
+            <span class="x">X</span>
+         </label>
+         <ul class="menu-items">
+            <a class="logo-box" href="/">
+               <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem"
+                  onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
+            </a>
+            <div class="topnav-right">
+               <a class="underline" href="mindfulness">
+                  <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness
+               </a>
 
-      <a class="underline" href="diet">
-          <img src="../Media/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
-      </a>
+               <a class="underline-active" href="habits">
+                  <img src="../Media/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits
+               </a>
 
-      <a class="underline" href="lockdown">
-          <img src="../Media/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
-      </a>
+               <a class="underline" href="diet">
+                  <img src="../Media/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet
+               </a>
 
-      <a class="underline" href="clinics">
-          <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
-      </a>
-   </ul>
+               <a class="underline" href="lockdown">
+                  <img src="../Media/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Lockdown
+               </a>
+
+               <a class="underline" href="clinics">
+                  <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Clinics
+               </a>
+         </ul>
+      </div>
    </div>
-    </div>
-    </div>
+   </div>
    <div class="cn-whitespace"></div>
    <section>
 
@@ -157,7 +159,7 @@
    <div class="footer-content">
       <b>Mental Assist</b>
       Glasgow Caledonian University - Honours Project [MHW225671] </br>
-      Ⓒ 2022 Copyright: Ivan Todorov [S1822426] ┃ Information by NHS 
+      Ⓒ 2022 Copyright: Ivan Todorov [S1822426] ┃ Information by NHS
       <div class="footer-link">
          <a class="footer-link-button" href="https://www.facebook.com/GlasgowCaledonianUniversity/" target="_blank"> <i
                class="fab fa-facebook-f icon"> </i></a>
