--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Ivan Todorov">
-    <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css" />
-    <link rel="stylesheet" href="hJps://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.min.css">
-    <script src="https://kit.fontawesome.com/5c4ebf68fc.js" crossorigin="anonymous"></script>
-    <title>Mental Assist | Homepage</title>
-  </head>
-  <body>
-    <div id="navbar">
-      <input type="checkbox" id="check" />
-      <div class="menu">
-        <label class="button-click" for="check">
-          <span class="b">&#9776;</span>
-          <span class="x">X</span>
-        </label>
-        <ul class="menu-items">
-      <a class="logo-box" href="/">
-      <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
-  </a>
-      <div class="topnav-right">
-      <a class="underline" href="mindfulness">
-          <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
-      </a>
-      
-      <a class="underline" href="habits">
-          <img src="../Media/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
-      </a>
 
-      <a class="underline" href="diet">
-          <img src="../Media/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
-      </a>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Ivan Todorov">
+  <link rel="icon" href="../Media/mental-assist-icon.ico">
+  <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css" />
+  <link rel="stylesheet" href="hJps://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.min.css">
+  <script src="https://kit.fontawesome.com/5c4ebf68fc.js" crossorigin="anonymous"></script>
+  <title>Mental Assist | Homepage</title>
+</head>
 
-      <a class="underline" href="lockdown">
-          <img src="../Media/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
-      </a>
+<body>
+  <div id="navbar">
+    <input type="checkbox" id="check" />
+    <div class="menu">
+      <label class="button-click" for="check">
+        <span class="b">&#9776;</span>
+        <span class="x">X</span>
+      </label>
+      <ul class="menu-items">
+        <a class="logo-box" href="/">
+          <img src="/Media/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem"
+            onmouseover="this.src='../Media/logo2.svg';" onmouseout="this.src='../Media/logo.svg';">
+        </a>
+        <div class="topnav-right">
+          <a class="underline" href="mindfulness">
+            <img src="../Media/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness
+          </a>
 
-      <a class="underline" href="clinics">
-          <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
-      </a>
-   </ul>
-   </div>
+          <a class="underline" href="habits">
+            <img src="../Media/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits
+          </a>
+
+          <a class="underline" href="diet">
+            <img src="../Media/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet
+          </a>
+
+          <a class="underline" href="lockdown">
+            <img src="../Media/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Lockdown
+          </a>
+
+          <a class="underline" href="clinics">
+            <img src="../Media/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Clinics
+          </a>
+      </ul>
     </div>
-    </div>
-    <section class="showcase">
-        <video src="../Media/video.mp4" muted loop autoplay></video>
-          <div class="overlay"></div>
-    </section>
-  </body>
+  </div>
+  </div>
+  <section class="showcase">
+    <video src="../Media/video.mp4" muted loop autoplay></video>
+    <div class="overlay"></div>
+  </section>
+</body>
+
 </html>
